# open-rl-trainer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
examples/: evaluate_model.py  train_self_play.py  train_supervised.py
open_rl_trainer/: __init__.py
open_rl_trainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
open_rl_trainer/data/: __init__.py  dataset.py  preprocessing.py
open_rl_trainer/data/adapters/: __init__.py  json_adapter.py  parquet_adapter.py
open_rl_trainer/evaluation/: __init__.py  arena.py  metrics.py
open_rl_trainer/networks/: __init__.py  base.py  heads.py  resnet.py  transformer.py
open_rl_trainer/training/: __init__.py  losses.py  mcts.py  self_play.py  supervised.py
open_rl_trainer/utils/: __init__.py  config.py  export.py  logging.py
tests/: test_config.py  test_data.py  test_training.py
